Mon Feb 19 09:00:29 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (send_repository): Fix indentation.

Mon Feb 19 01:10:01 1996  Karl Fogel  <kfogel@floss.red-bean.com>

        * login.c (login): print out full repos so user knows which server
        she's logging into.

        * client.c (send_repository): die if `repos' is NULL.  This is a
        lame solution; see comments in code.

Thu Feb 15 15:04:01 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* error.c (error): Free entire and mess when done with them.

	* sanity.sh (info): Correct syntax of .cvsrc file.

	* cvs.h, expand_path.c, edit.c, parseinfo.c, wrapper.c:
	expand_path now takes arguments containing file and line for error
	message, and it prints the error message itself.
	* sanity.sh (info-6a): Test printing of error message.

	* expand_path.c (expand_variable): Add USER internal variable.
	* sanity.sh (info): Test USER and CVSROOT internal variables too.

Wed Feb 14 19:11:08 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* main.c (usg): Add -s option.

Tue Feb 13 20:26:06 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	gcc -Wall lint:
	* mkmodules.c (mkmodules_usage): Remove declaration of
	non-existent function.
	* cvs.h (mkmodules): Declare.

Mon Feb 12 12:20:04 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* mkmodules.c: Rename main to mkmodules and remove various pieces
	of scaffolding which it used to emulate non-existent parts of CVS.
	Change calling convention to just take a char * not argc,argv.
	Save and restore working directory.
	* commit.c (commit_filesdoneproc): Call it if checking files into
	CVSROOT.
	* Makefile.in (SOURCES): Add mkmodules.c.
	(OBJECTS): Add mkmodules.o.
	(MSOURCES,MOBJECTS): Removed.
	(COMMON_OBJECTS): Removed; move former contents into OBJECTS.
	Update other rules accordingly.
	* sanity.sh: Adjust to reflect nonexistence of mkmodules.

	These changes introduce functions cvs_output and cvs_outerr;