@@ -258,11 +258,15 @@ findnode (list, key)
 {
     Node *head, *p;
 
-    if ((list == (List *) NULL) || (key == NULL))
+    /* This probably should be "assert (list != NULL)" (or if not we
+       should document the current behavior), but only if we check all
+       the callers to see if any are relying on this behavior.  */
+    if ((list == (List *) NULL))
 	return ((Node *) NULL);
 
     head = list->hasharray[hashp (key)];
     if (head == (Node *) NULL)
+	/* Not found.  */
 	return ((Node *) NULL);
 
     for (p = head->hashnext; p != head; p = p->hashnext)
